# containerizer

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  pyproject.toml
definitions/: base-agent.def  base-system.def
skills/: INSTALL.md
skills/sandbox-configure/: SKILL.md
skills/sandbox-configure/references/: template.yaml
skills/sandbox-install/: SKILL.md
skills/sandbox-reference/: SKILL.md
src/sandbox/: audit.py  cleanup.py  cli.py  config.py  container.py  skills_installer.py  slurm.py  ssh.py
src/sandbox/profiles/: __init__.py  default.py
src/sandbox/skills/sandbox-configure/references/: template.yaml
src/sandbox/skills/sandbox-install/: SKILL.md
src/sandbox/skills/sandbox-reference/: SKILL.md
tasks/: schema.yaml
tasks/examples/: gpu-training.yaml  interactive-claude.yaml  ssh-cursor.yaml
templates/: slurm-job.sh.j2
tests/: conftest.py  test_audit.py  test_cleanup.py  test_config.py  test_container.py  test_skills_installer.py  test_slurm.py
tests/e2e/: conftest.py  test_slurm_e2e.py  test_ssh_e2e.py
tests/fixtures/: sample-task.yaml
tests/integration/: conftest.py  test_audit_e2e.py  test_build_apptainer_cmd.py  test_conda_env.py  test_container_runtime.py  test_isolation.py  test_output_persistence.py  test_ssh.py  test_two_layer_images.py
